working on  opp list filters
Former-commit-id: 949567fceb49ba47a20abb6289ebe3b50050a046 [formerly 3d4f92a3598e875e2cca2c602b6bcc6c96d55763] [formerly df8b46a225e59ba3107eefdece6393609a749185 [formerly d492b97c4756648784baf9e0ad733cbb89e002ba]]
Former-commit-id: f4697c8fcd63a2f40aba504d447a1fa25e2f70b7 [formerly 0d977b3a3090d81738e2a84ce56fad274efa0e0e]
Former-commit-id: 9c20c570d4531e66faba971060edf82ecae49526

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -658,7 +658,7 @@
         <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
-                    <!-- class="fa fa-reorder"--><i></i>{{_('Tags')}}
+                    <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{_('Tags')}}
             </div>
           </div>
           <div class="portlet-body">
