--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -606,7 +606,7 @@
       <div class="portlet showCard fixedCard ">
         <div class="portlet-title">
           <div class="caption">
-                  <!-- class="fa fa-reorder"--><i></i>{{ _('Tags')}}
+                  <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{ _('Tags')}}
           </div>
         </div>
         <div class="portlet-body">
