--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -639,7 +639,7 @@
         <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
-                    <!-- class="fa fa-reorder"--><i></i>{{_('Tags')}}
+                    <!-- class="fa fa-reorder"--><i class="fa fa-tag" style="font-size: 16px;"></i>{{_('Tags')}}
             </div>
           </div>
           <div class="portlet-body">
