--- a/templates/base.html
+++ b/templates/base.html
@@ -423,10 +423,10 @@
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
- //var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
 
